--- a/src/index.html
+++ b/src/index.html
@@ -3,6 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
+    <script src="js/scripts.js?v=$version$"></script>
+    <!-- inject:partials/_meta.html -->
+    <!-- contents of html partials will be injected here -->
+    <!-- endinject -->
 </head>
 <body>
 
